# yourdigest

./: .env.example  .gitignore  Makefile  OPTIMIZATION_PLAN.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_rss_summarization.py  004_digest_feed_briefing.py  005_digest_feed_ids.py  a22574149180_add_podcast_depot_garmin_tables_drift_.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/api/: assistant.py  audit.py  classification.py  connectors.py  dashboard.py  depot.py  digest.py  feeds.py  forwarding.py  garmin.py  health.py  llm.py  mail.py  podcasts.py  settings.py  weather.py
backend/app/connectors/: base.py  email_connector.py  registry.py  rss_connector.py  weather_connector.py
backend/app/llm/: prompt_registry.py  provider.py  sanitizer.py
backend/app/models/: __init__.py  assistant.py  audit.py  base.py  classification.py  connector.py  depot.py  digest.py  feed.py  forwarding.py  garmin.py  llm.py  mail.py  podcast.py  weather.py
backend/app/schemas/: assistant.py  classification.py  common.py  connector.py  depot.py  digest.py  forwarding.py  llm.py  mail.py  podcast.py
backend/app/services/: audit_service.py  classification_service.py  connector_service.py  depot_service.py  digest_service.py  feed_service.py  forwarding_service.py  garmin_service.py  imap_client.py  mail_service.py  market_data.py  podcast_delivery_service.py  podcast_feed_service.py  podcast_processing_service.py  (+5 more)
(+47 files in other folders)
