[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "openai>=1.60,<2",
    "cryptography>=44,<45",
    "apscheduler>=3.10,<4",
    "aioimaplib>=2,<3",
    "aiosmtplib>=3,<4",
    "mail-parser>=3.15,<4",
    "beautifulsoup4>=4.12,<5",
    "bleach>=6,<7",
    "redis>=5,<6",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.18",
    "feedparser>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
